--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1> Hello, this is Shelvia's portfolio website.</h1>
+---
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+
+layout: blog
+title: Blog
+---
+---
